--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,6 @@
 <resources>
     <string name="app_name">PhoenixIV</string>
+    <string name="image">image</string>
+    <string name="download">Download</string>
+    <string name="display">Display</string>
 </resources>
